Fixed minor issue with spacing in partners section

--- a/index.css
+++ b/index.css
@@ -829,6 +829,14 @@ p {
     .hero .col-right {
         width: 40%;
     }
+
+    /* PARTNERS GRID */
+    .partners-section {
+        margin: -60px 0 0 0;
+    }
+    .partners-grid {
+        margin: 0 0 var(--spacing-xl) 0;
+    }
 }
 
 @media only screen and (max-width:900px) {
@@ -923,6 +931,11 @@ p {
     .hero-phone {
         height: 450px;
         transform: translateX(32px);
+    }
+
+    /* PARTNERS GRID */
+    .partners-section {
+        margin: -20px 0 0 0;
     }
 
     /* UNIFIED PLATFORM SECTION */
@@ -1021,6 +1034,10 @@ p {
     }
 
     /* PARTNERS GRID SECTION */
+    .partners-section {
+        margin: var(--spacing-lg) 0 var(--spacing-sm) 0;
+    }
+
     .partners-grid {
         grid-template-columns: 1fr 1fr;
     }
